Name:                woffex
Version:             0.1
Author:              Andrew Drake
Maintainer:          adrake@adrake.org
Stability:           experimental

Synopsis:            Web Open Font Format (WOFF) unpacker.
License:             BSD3
License-file:        LICENSE
Copyright:           (c) 2011 Andrew Drake
Category:            Data
Build-type:          Simple
Description:
  Stuff

Cabal-version:       >=1.2

Source-Repository head
  type:     git
  location: http://git.hax.so/woffex.git

Executable woffex
  Main-is: Main.hs
  Build-depends:
    base >= 4,
    binary >= 0.5.0.2 && < 0.6,
    bytestring >= 0.9.1.10 && < 0.10,
    filepath >= 1.2.0.0 && < 1.3,
    zlib >= 0.5.3.1 && < 0.6